# profint

./: .gitignore  README.md  TODO.org  build.js  cases.html  dune-project  package-lock.json  package.json  profint.opam  test.html  test2.html
demo/: .gitignore  Makefile  README.md  demo.js  go.html  index-dagstuhl-2024.html  index.html  index_cade28.html
demo/cade28/: .gitignore  Makefile  go.html  index.html
demo/coq/: .gitignore  Makefile  Proof.v
demo/coq_reflect/: Proof.v  _CoqProject
demo/lean3/: Makefile
demo/lean3/src/: Profint.lean  Proof.lean
demo/lean4/: .gitignore  Makefile  Profint.lean  Proof.lean  lakefile.lean
devdocs/: COMPLETED.org  TODO.org
lib/: .ocamlinit  doc.ml  doc.mli  dune  firstorder.ml  form.ml  form2.ml  form3.ml  form4.ml  form4_core.ml  form4_cos.ml  form4_dmanip.ml  form4_paths.ml  form4_pp.ml  form4_simplify.ml  form4_test.ml  ident.ml  ident.mli  idt.ml  idt.mli  path.ml  prolex.mll  proprs.mly  syntax.ml  term.ml  term_context.ml  test.html  to.ml  to.mli  to_coq.ml  to_coq_reflect.ml  to_html.ml  to_isahol.ml  to_json.ml  to_katex.ml  to_lean3.ml  to_lean4.ml  to_lean4.mli  to_pdf.ml  types.ml  (+4 more)
lib/systems/coq/: Profint.v
lib/systems/coq_reflect/: Profint.v  Proof.v
lib/systems/isabelle_hol/: .gitignore  Profint.thy  Proof.thy  ROOT  Test.thy
lib/systems/isabelle_hol/document/: root.tex
lib/systems/lean3/: .gitignore  lean-toolchain  leanpkg.toml
lib/systems/lean3/src/: Profint.lean
lib/systems/lean4/: Makefile  Profint.lean  lakefile.lean  lean-toolchain
lib/systems/lean4/Profint/: Basic.lean  Paths.lean  Theorems.lean  Within.lean
lib/test/: dune  form4_test.ml  pro_test.ml  profint_lib_test.ml  term_test.ml
src/: dune  ora.ml
src/demo/: demo.js
src/profint/: dune  profint_jsoo.ml
src/profint_batch/: dune  profint_batch.ml  systems.ml
src/profint_batch/regression/: p0.json  strict_order_asymmetric.json  total_antisymm_equiv.json
test/: dune  form4_test.ml  form_test.ml  idt_test.ml  pro_test.ml  profint_test.ml  term_test.ml
